Fix the background image rendering on IOS.

--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -1,9 +1,12 @@
 .home-background {
-  background: url("/img/home-background.jpg") no-repeat center center fixed;
-  -webkit-background-size: 100%;
-  -moz-background-size:    100%;
-  -o-background-size:      100%;
-  background-size:         100%;
+  height: 100%;
+  background-image: url('/img/home-background.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: auto 100%;
+  -moz-background-size:    auto 100%;
+  -o-background-size:      auto 100%;
+  background-size:         auto 100%;
   -webkit-background-size: cover;
   -moz-background-size:    cover;
   -o-background-size:      cover;
